--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": ">=7.1.0",
         "laravel/framework": "5.5.*",
         "honey-comb/starter": "*",
-        "honey-comb/core": "*",
+        "honey-comb/core": "*"
     },
     "require-dev": {
         "brianium/paratest": "^1.0",
