composer update with laravel 5.6

--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,35 @@
 {
     "name": "honey-comb/slugs",
-    "description": "",
-    "keywords": [],
+    "description": "HoneyComb slugs",
+    "keywords": ["honeycomb", "honey", "laravel", "cms", "slugs"],
     "homepage": "https://github.com/honey-comb/slugs",
     "license": "MIT",
-    "authors": [],
+    "authors": [
+        {
+            "name": "Mantas Paulauskas",
+            "email": "mp@interactivesolutions.lt"
+        },
+        {
+            "name": "Jevgenij Dmitrijev",
+            "email": "jd@interactivesolutions.lt"
+        },
+        {
+            "name": "Darius Šlubelis",
+            "email": "darius.s@innovationbase.eu"
+        }
+    ],
     "repositories": [],
     "require": {
-        "php": ">=7.1.0",
-        "laravel/framework": "5.5.*",
-        "honey-comb/starter": "*",
-        "honey-comb/core": "*"
+        "php": "^7.1",
+        "laravel/framework": "5.6.*",
+        "honey-comb/starter": "0.2.*",
+        "honey-comb/core": "0.3.*"
     },
     "require-dev": {
-        "brianium/paratest": "^1.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench-browser-kit": "^3.5",
-        "phpunit/phpunit": "^6.4"
+        "orchestra/testbench-browser-kit": "^3.6",
+        "phpunit/phpunit": "~7.0",
+        "codedungeon/phpunit-result-printer": "^0.14"
     },
     "autoload": {
         "psr-4": {
@@ -31,15 +44,19 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "HoneyComb\\Core\\Providers\\HCCoreServiceProvider"
+            ]
+        }
+    },
     "scripts": {
         "test": [
             "paratest -p4 --colors"
         ]
     },
     "config": {
-        "secure-http": false,
-        "platform": {
-            "php": "7.1"
-        }
+        "secure-http": false
     }
 }
