--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "HoneyComb\\Core\\Providers\\HCCoreServiceProvider"
+                "HoneyComb\\Slugs\\Providers\\HCSlugsServiceProvider"
             ]
         }
     },
